src/components/ArticlesNavbar/index.css
.articles-navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
  border-bottom: 1px solid #ccc;
  margin: 0;
  border-bottom-width: 1px;
  width: 100%;
}

.nav-links {
  display: flex;
  gap: 30px;
  list-style: none;
}

.nav-links a {
  color: #000000;
  text-decoration: none;
  font-size: 18px;
  font-weight: 500;
}

a:hover {
  color: blue;
}

/* Logo */
.logo {
  width: 100px;
}

.notification-icon {
  width: 50px;
  height: 50px;
}

